--- a/public/styles.css
+++ b/public/styles.css
@@ -13,7 +13,7 @@ body {
 
 header {
   background-color:#65b7eb;
-  margin: auto -16px;
+  margin: auto ,0;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
@@ -22,6 +22,8 @@ header h1 {
   background-color:#65b7eb;
   font-family: "McLaren", cursive;
   font-weight: 200;
+  margin-left: .5rem;
+  margin-right: .5rem;
 }
 
 footer {
